식물 DTO 통합, 식재환경 Enum 추가, 패키지 구조 수정